--- a/App_combine_version/introduction.html
+++ b/App_combine_version/introduction.html
@@ -81,7 +81,7 @@
 <p>Choose year period, CBSA and Health Concern Levels you want to analyze. You can select multiple CBSAs and Health Concern Levels to do comparison analyses. The picture above show you the default values of each selection.</p>
 <p><strong>Plot Selection</strong>:</p>
 <p>For users who want to do comparison during a relatively long time period, the better choice is to select line plot and analyze the trend.</p>
-<p>For users who want to do comparison only in one or a few years, select bar plot here. For example, if users want to compare the percentage of health concern levels between diffrent CBSAs only in a specific year (2008), choose bar plot and the graph will display properly.</p>
+<p>For users who want to do comparison only in one or a few years, select bar plot here. For example, if users want to compare the percentage of health concern levels between different CBSAs only in a specific year (2008), choose bar plot and the graph will display properly.</p>
 <ul>
 <li><strong>Health Concern Plot:</strong></li>
 </ul>
