update app description

--- a/description.html
+++ b/description.html
@@ -125,7 +125,11 @@ $(document).ready(function () {
 <h1>App Description</h1>
 <div id="overview" class="section level2">
 <h2>Overview</h2>
-<p>The Environment and Health App is to help users to analyze and visualize data about environment and health. It can be used to do horizontal analyses among different countries, states and cities. You can also use it to do time series analyses.</p>
+<p>The Environment and Health App is to help users analyze and visualize environmental and health data. It can be used to do horizontal analyses among different countries, states and cities. You can also use it to do time series analyses. Besides, you can get summary statistics and evaluate your health status based on personal characteristics.</p>
+</div>
+<div id="audience" class="section level2">
+<h2>Audience</h2>
+<p>Environmental engineers and people who are interested in analyzing environmental data and concerned with the relationship between environment and health status.</p>
 </div>
 <div id="dataset-overview" class="section level2">
 <h2>Dataset Overview</h2>
@@ -134,14 +138,14 @@ $(document).ready(function () {
 <ul>
 <li><p>Annual AQI dataset contains annual AQI information from 2000 to 2017 by Core Based Statistical Area (CBSA).</p></li>
 <li><p>The U.S. pollution dataset contains four major pollutants (Nitrogen Dioxide, Sulphur Dioxide, Carbon Monoxide and Ozone) AQI data for every day from 2000-2016. All the data is scraped from the database of U.S. <a href="https://aqsdr1.epa.gov/aqsweb/aqstmp/airdata/download_files.html">EPA</a></p></li>
-<li><p>AirQualityTracking dataset contains (Yiquan)</p></li>
+<li><p>AirQualityTracking dataset contains different air quality values of different state. The dataset was from Center for Disease Control and the air quality was a combination of ozone and PM2.5.</p></li>
 </ul>
 </div>
 <div id="global-temperature-datasets" class="section level3">
 <h3>Global temperature datasets</h3>
 <p>Notes: There are some missing values in the following datasets, which leads to the incompleteness of the temperature map in some year.</p>
 <ul>
-<li><p>Global Temperature contains global land average temperature from 1750-2015. Note: there are some missing values in this dataset.</p></li>
+<li><p>Global Temperature contains global land average temperature from 1750-2015.</p></li>
 <li><p>Global Land Temperature by Country dataset contains global land average temperature from 11/1743-09/2015.</p></li>
 <li><p>Global Land Temperature by State dataset contains global land average temperature from 11/1743-09/2015.</p></li>
 </ul>
